--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -10,4 +10,5 @@
   <input type="text" name="word">
   <input type="submit">
   <%= hidden_field_tag :letters, @letters %>
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
 </form>
